--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://naholo:1amherenow!@github.com/naholo/naholoseries.git"
+    "url": ""
   },
   "keywords": [
     "react",
